# Citrus

./: CMakeLists.txt
examples/: CMakeLists.txt  monitor_sample.cpp  opengl_cube.cpp  window_sample.cpp
include/Citrus/graphics/OpenGL/: Renderer.hpp  Shader.hpp
include/Citrus/graphics/core/: Vertex.hpp  color.hpp
include/Citrus/graphics/glad/: glad.h
include/Citrus/sys/: Globals.hpp  Keyboard.hpp  Monitor.hpp  Vector2.hpp  Vector3.hpp  VideoMode.hpp  Window.hpp  sys.hpp
source/: CMakeLists.txt
source/graphics/: CMakeLists.txt  glad.c
source/graphics/OpenGL/: Renderer.cpp  Shader.cpp
source/sys/: CMakeLists.txt  Monitor.cpp  Window.cpp  globals.cpp
